--- a/style/style.css
+++ b/style/style.css
@@ -74,7 +74,7 @@ header {
 }
 
 .about-info {
-  padding: 10px;
+  padding-right: 10px;
   width: 444px;
 }
 
@@ -88,9 +88,17 @@ header {
   font-size: 42px;
 }
 
+.image-row-2 img {
+  width: 100%;
+}
+
 .image-row-1 {
   display: flex;
   justify-content: space-between;
+}
+
+.image-row-1 img {
+  width: 49%;
 }
 
 .image-row-2 {
