--- a/style/responsive.css
+++ b/style/responsive.css
@@ -74,3 +74,13 @@
     width: 100%;
   }
 }
+
+@media (max-width: 320px) {
+  .image-row-1 {
+    flex-direction: column;
+  }
+  .image-row-1 img {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+}
